Working full screen intro video Video now crops correctly and hides overflow, keeping video element full screen on height and width at all times and content centered in non-nav portion of the page. Navigation buttons now work

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -101,9 +101,37 @@ section{
 //featured
 #featured{
   width:100%;
+  overflow:hidden;
+  position:absolute;
+  background:black;
+  top:0;
   ul,li{
     height: inherit;
   }
+
+  .video-js{
+    overflow:hidden;
+  }
+
+  #nav-left{
+    position:absolute;
+    height:30px;
+    width:30px;
+    top: 45%;
+    left: 20px;
+    background:url('../images/inverse_left_arrow.png') center no-repeat;
+    z-index:999;
+  }
+  #nav-right{
+    position:absolute;
+    height:30px;
+    width:30px;
+    top: 45%;
+    right: 30px;
+    background:url('../images/inverse_right_arrow.png') center no-repeat;
+    z-index:999;
+  }
+
   figure{
     height: inherit;
     position: relative;
@@ -119,7 +147,7 @@ section{
 //ABOUT
 .callout{
   height: 210px;
-  margin: 60px auto 0;
+  margin: 30px auto 0;
   width: 80%;
 
   padding: 30px 0 0;
@@ -528,7 +556,7 @@ p.hero{
     left: 0px;
     text-align: left;
     padding: 0px;
-    
+
   }
   .right-bg{
     text-align: right;
